crates/runner/tests/snapshots/dep_graph_test__run_target__avoids_dupe_targets.snap
---
source: crates/action-runner/tests/dep_graph_test.rs
assertion_line: 215
expression: graph.to_dot()
---
digraph {
    0 [ label="SetupNodeTool(16.17.0)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    1 [ label="InstallNodeDeps(16.17.0)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    2 [ label="SyncNodeProject(tasks)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    3 [ label="RunTarget(tasks:lint)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    1 -> 0 [ arrowhead=box, arrowtail=box]
    2 -> 0 [ arrowhead=box, arrowtail=box]
    3 -> 1 [ arrowhead=box, arrowtail=box]
    3 -> 2 [ arrowhead=box, arrowtail=box]
}

