crates/runner/tests/snapshots/dep_graph_test__run_target__runs_all_projects_for_target_all_scope.snap
---
source: crates/action-runner/tests/dep_graph_test.rs
assertion_line: 245
expression: graph.to_dot()
---
digraph {
    0 [ label="SetupNodeTool(16.17.0)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    1 [ label="InstallNodeDeps(16.17.0)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    2 [ label="SyncNodeProject(basic)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    3 [ label="RunTarget(basic:build)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    4 [ label="SyncNodeProject(build-a)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    5 [ label="SyncNodeProject(build-c)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    6 [ label="RunTarget(build-a:build)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    7 [ label="RunTarget(build-c:build)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    8 [ label="SyncNodeProject(build-b)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    9 [ label="RunTarget(build-b:build)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    1 -> 0 [ arrowhead=box, arrowtail=box]
    2 -> 0 [ arrowhead=box, arrowtail=box]
    3 -> 1 [ arrowhead=box, arrowtail=box]
    3 -> 2 [ arrowhead=box, arrowtail=box]
    4 -> 0 [ arrowhead=box, arrowtail=box]
    5 -> 0 [ arrowhead=box, arrowtail=box]
    4 -> 5 [ arrowhead=box, arrowtail=box]
    4 -> 2 [ arrowhead=box, arrowtail=box]
    6 -> 1 [ arrowhead=box, arrowtail=box]
    6 -> 4 [ arrowhead=box, arrowtail=box]
    6 -> 3 [ arrowhead=box, arrowtail=box]
    7 -> 1 [ arrowhead=box, arrowtail=box]
    7 -> 5 [ arrowhead=box, arrowtail=box]
    6 -> 7 [ arrowhead=box, arrowtail=box]
    8 -> 0 [ arrowhead=box, arrowtail=box]
    9 -> 1 [ arrowhead=box, arrowtail=box]
    9 -> 8 [ arrowhead=box, arrowtail=box]
}

